test/files/neg/annotated-literal-annotation-arg.check
annotated-literal-annotation-arg.scala:14: error: implicit error;
!I e: Foo
  $foo

  implicitly[Foo]
            ^
annotated-literal-annotation-arg.scala:15: error: implicit error;
!I e: Bar
  bar

  implicitly[Bar]
            ^
2 errors
